modules/015-admission-policy-engine/charts/constraint-templates/templates/security/allowed-volume-types.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: d8allowedvolumetypes
  labels:
    heritage: deckhouse
    module: admission-policy-engine
    security.deckhouse.io: security-policy
  annotations:
    metadata.gatekeeper.sh/title: "Volume Types"
    metadata.gatekeeper.sh/version: 1.0.0
    description: >-
      Restricts mountable volume types to those specified by the user.
      Corresponds to the `volumes` field in a PodSecurityPolicy. For more
      information, see https://kubernetes.io/docs/concepts/security/pod-security-standards/
spec:
  crd:
    spec:
      names:
        kind: D8AllowedVolumeTypes
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          type: object
          description: >-
            Restricts mountable volume types to those specified by the user.
            Corresponds to the `volumes` field in a PodSecurityPolicy. For more
            information, see https://kubernetes.io/docs/concepts/security/pod-security-standards/
          properties:
            volumes:
              description: "`volumes` is an array of volume types. All volume types can be enabled using `*`."
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: Rego
          source:
            version: "v1"
            libs:
              - |
                {{- include "constraint-templates.lib.common.container-review" . | nindent 16 }}
              - |
                {{- include "constraint-templates.lib.check_set" . | nindent 16 }}
              - |
                {{- include "constraint-templates.lib.match" . | nindent 16 }}
              - |
                {{- include "constraint-templates.lib.exception.spe" . | nindent 16 }}
            rego: |
              package d8.security_policies
 
              import data.lib.check_set.check_value_in_set_with_wildcards
              import data.lib.common.object_labels
              import data.lib.common.object_namespace
              import data.lib.common.pod_spec
              import data.lib.exception.allowed_values_or_empty
              import data.lib.exception.resolve_spe_from_labels
              import data.lib.common.review_kind

              violation contains {"msg": msg, "details": object.union(result.detail, {"field": "volumes"})} if {
                not input.review.operation == "DELETE"
                obj := input.review.object
                volume_fields := {x | pod_spec.volumes[_][x]; x != "name"}
                field := volume_fields[_]
                labels := object_labels
                namespace := object_namespace
                spe := resolve_spe_from_labels(labels, namespace)
                spe_allowed := allowed_values_or_empty(spe, ["spec", "volumes", "types", "allowedValues"])
                result := check_value_in_set_with_wildcards(
                  field,
                  input.parameters.volumes,
                  spe_allowed,
                  {}
                )
                not result.allowed
                msg := sprintf("The volume type %v is not allowed, %v: %v. | %v", [field, review_kind, obj.metadata.name, result.msg])
              }
