modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-volume-types/constraint_security_policy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8AllowedVolumeTypes
metadata:
  name: security-policy
spec:
  enforcementAction: "deny"
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: security.deckhouse.io/pod-policy
          operator: In
          values: 
          - baseline
          - restricted
  parameters:
    volumes:
      - "*"
