modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-volume-types/test_samples/constraint_templates/pss_restricted/004-allowed-deployment-no-volumes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allowed-deployment-no-volumes
  namespace: testns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
