modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-volume-types/test_samples/constraint_templates/pss_restricted/005-allowed-downwardAPI-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-downwardAPI-volume
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: podinfo
          mountPath: /etc/podinfo
  volumes:
    - name: podinfo
      downwardAPI:
        items:
          - path: "labels"
            fieldRef:
              fieldPath: metadata.labels
