modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-volume-types/test_samples/constraint_templates/pss_restricted/006-allowed-emptyDir-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-emptyDir-volume
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: cache
          mountPath: /cache
  volumes:
    - name: cache
      emptyDir: {}
