modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-volume-types/test_samples/constraint_templates/pss_restricted/007-allowed-ephemeral-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-ephemeral-volume
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: ephemeral
          mountPath: /ephemeral
  volumes:
    - name: ephemeral
      ephemeral:
        volumeClaimTemplate:
          spec:
            accessModes: ["ReadWriteOnce"]
            resources:
              requests:
                storage: 1Gi
