modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-volume-types/test_samples/constraint_templates/pss_restricted/008-allowed-multiple-volumes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-multiple-volumes
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: config
          mountPath: /etc/config
        - name: secret
          mountPath: /etc/secret
  volumes:
    - name: config
      configMap:
        name: my-config
    - name: secret
      secret:
        secretName: my-secret
